// prepare: https://grpc.io/docs/languages/go/quickstart/
// generate code: # protoc --go_out=. --go-grpc_out=. ./observe.proto
// go test: # go test -v -run="TestBuildGrpcServer"

syntax = "proto3";

// option go_package = "github.com/oopattern/gocool/proto";

package proto;

service Observe {
    rpc SayRoute(RouteReq) returns (RouteResp) {}
}

message RouteReq {
    string name = 1;
}

message RouteResp {
    string ip = 1;
    string port = 2;
}